--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.5.5",
+    "@types/react": "^16.9.1",
+    "@types/react-dom": "^16.8.5",
     "add-asset-html-webpack-plugin": "^3.1.3",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "glob-all": "^3.1.0",
@@ -36,6 +39,7 @@
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "typescript": "^3.5.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
