--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
+    "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "glob-all": "^3.1.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -43,6 +45,7 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
   },
@@ -51,5 +54,11 @@
     "core-js": "^2.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
-  }
+  },
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "Firefox ESR",
+    "not ie < 9"
+  ]
 }
