--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
       "app": [
         "app/*"
       ],
+      "router": [
+        "router/*"
+      ]
     },
     "module": "esnext",
     "target": "es5",
