--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "purifycss-webpack": "^0.7.0",
     "react-dev-utils": "^9.0.1",
     "react-hot-loader": "^4.5.3",
+    "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
