--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.5.5",
-    "@types/react": "^16.9.1",
-    "@types/react-dom": "^16.8.5",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "antd": "^3.22.0",
     "awesome-typescript-loader": "^5.2.1",
@@ -30,6 +30,7 @@
     "glob-all": "^3.1.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-cssnext": "^3.1.0",
@@ -38,12 +39,14 @@
     "purifycss-webpack": "^0.7.0",
     "react-dev-utils": "^9.0.1",
     "react-hot-loader": "^4.5.3",
+    "react-loadable": "^5.5.0",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "typescript": "^3.5.3",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.2.2",
     "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
@@ -55,7 +58,11 @@
     "@babel/runtime-corejs2": "^7.5.5",
     "core-js": "^2.6.9",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
+    "@types/react": "^16.9.1",
+    "@types/react-dom": "^16.8.5"
   },
   "browserslist": [
     ">1%",
