--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "add-asset-html-webpack-plugin": "^3.1.3",
+    "ant-design-pro": "^2.3.2",
     "antd": "^3.22.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
@@ -37,6 +38,7 @@
     "postcss-loader": "^3.0.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
+    "rc-animate": "^2.10.0",
     "react-dev-utils": "^9.0.1",
     "react-hot-loader": "^4.5.3",
     "react-loadable": "^5.5.0",
