--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd": "^3.22.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "cache-loader": "^4.1.0",
     "css-loader": "^3.1.0",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
