--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "nprogress": "^0.2.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
     "purify-css": "^1.2.5",
@@ -46,6 +47,7 @@
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "rimraf": "^2.6.3",
+    "rxjs": "^5.5.12",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
